# Agents

./: .dockerignore  .gitignore  404.html  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  index.html  pyproject.toml
.github/workflows/: deploy-mvp-ui.yml
assets/: index-Dlp7Q9TL.js  index-qoj3BRZk.css
deploy/: README.md  agent-server.Dockerfile  backup.sh  docker-compose.yml  nginx.conf.example  web.Dockerfile
docs/: README.md
docs/01-strategy/: brand.md  business-strategy.md  prd-p1.md  roadmap.md
docs/01-strategy/adr/: ADR-001-openhands-engine.md  ADR-002-demo-mode.md  ADR-003-golden-template-pocketbase.md  ADR-004-declarative-modules.md  ADR-005-deepseek-default.md  ADR-006-node-production-server.md  ADR-007-business-sequencing.md  ADR-008-brand-naming.md  ADR-009-sandbox-isolation.md  README.md
docs/02-product/: acceptance-test-scenarios.md  ia-interaction-spec.md  metrics.md  user-stories.md
docs/02-product/experiments/: stability-001.md  stability-002.md
docs/03-engineering/: sandbox-isolation.md
docs/04-materials/: beta-invitation.md
prototype/: agent-server.config.json  dev.sh  test_requirement_input.py
prototype/mvp-ui/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.bootstrap.ts  vite.config.ts
prototype/mvp-ui/server/: appCheck.ts  gateway.ts  index.ts  pbProxy.ts  persistenceCheck.ts  pocketbase.ts
prototype/mvp-ui/src/: App.tsx  index.css  main.tsx  mockAgent.ts  mockProjects.ts  router.tsx  stagent-theme.css  store.ts  types.ts  useAppFlow.ts
prototype/mvp-ui/tests/: app-assertions.ts  (+2 more)
(+60 files in other folders)
