[project]
name = "agents-prototype"
version = "0.1.0"
description = "Stagent prototype — OpenHands engine dependencies for prototype/dev.sh"
requires-python = ">=3.12"
dependencies = [
    "openhands-agent-server>=1.31.0",
    "openhands-sdk>=1.31.0",
    "openhands-tools>=1.31.0",
]

[tool.uv]
package = false
